fix navigation bar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Typography
 ----------------------------------------------------------------------------- */
 body {
-	font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 html,
 body {
@@ -893,8 +893,7 @@ img.icon {
   border-radius: unset;
   margin-top: 25px;
 }
-.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
-  margin-left: 0;
+.navbar-brand {
   padding: 0;
 }
 .navbar-right {
@@ -911,4 +910,24 @@ img.icon {
 }
 .nav > li > a:hover, .nav > li > a:focus {
   background-color: unset;
+}
+
+.navbar-brand {
+  margin: auto;
+  float: none;
+}
+@media (min-width: 768px) {
+.navbar-brand {
+  margin-left: 0 !important;
+}
+}
+
+.nav {
+  display: flex;
+}
+
+@media (max-width: 767px) {
+.navbar-nav {
+  margin-left: 0;
+}
 }
